Fix alignment of button-collapse for mobile nav drawer.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -252,7 +252,7 @@ input, textarea {
 }
 
 nav a.button-collapse {
-    left: -5px;
+    left: -30px;
 }
 
 .side-nav a {
